# ginkgo

./: .gitlab-ci.yml  CMakeLists.txt  INSTALL.md
benchmark/spmv/: CMakeLists.txt  cuda_linops.hpp  spmv.cpp
cmake/: build_helpers.cmake
core/test/matrix/: permutation.cpp
cuda/base/: device_guard.hpp
dev_tools/containers/: README.md  build_all_containers.sh  ginkgo-cuda-base.py  ginkgo-nocuda-base.py
hip/: CMakeLists.txt
hip/base/: types.hip.hpp
hip/matrix/: dense_kernels.hip.cpp
include/ginkgo/core/base/: exception_helpers.hpp  executor.hpp  lin_op.hpp  math.hpp  memory_space.hpp  types.hpp
include/ginkgo/core/matrix/: permutation.hpp
include/ginkgo/core/stop/: criterion.hpp
